--- a/02-pods.yaml
+++ b/02-pods.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx
-  Namespace: roboshop
+  namespace: roboshop
 spec:
   containers:
   - name: nginx
