--- a/05-service.yaml
+++ b/05-service.yaml
@@ -13,4 +13,15 @@ spec:
     protocol: TCP
     port: 80
     targetPort: 80
- 
+-----
+apiVersion: v1
+kind: Pod
+metadata:
+  name: label-1
+  labels:
+    app: nginx
+    environment: dev
+spec:
+  containers:
+  - name: label
+    image: nginx
